# bevy-template

./: Cargo.toml  flake.nix
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/game/src/plugins/: initialization.rs  input.rs  menu.rs  mod.rs  player.rs
flake-parts/: cargo.nix  shells.nix
