[package]
name = "game-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
bevy = { workspace = true }
bevy_kira_audio = { workspace = true }

# these must remain in sync with the versions bevy uses
winit = { version = "0.28.7", default-features = false }
image = { version = "0.24", default-features = false }


