[package]
name = "game-logic"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
bevy = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_kira_audio = { workspace = true }
